# LogCPP

./: CMakeLists.txt
include/fastcpp/core/: level.hpp  message.hpp
include/fastcpp/sinks/: baseSink.hpp  consoleSink.hpp
